<resources>
    <string name="app_name">RandomUserApp</string>
    <string name="text_female"> Female </string>
    <string name="text_male"> Male </string>
    <string name="app_title"> RANDOM USER GENERATOR  </string>
    <string name="label_nationality"> Nationality </string>
    <string name="label_searchApi"> Search on API </string>
    <string name="label_info"> Info</string>
    <string name="label_gender"> Gender </string>
    <string name="label_email"> Email </string>
    <string name="label_birth">Birth date</string>
    <string name="label_age"> Age </string>
    <string name="label_title"> Title </string>
    <string name="label_id"> ID </string>


    <string-array name="countries">
        <item>       </item>
        <item> Brazilian </item>
        <item> Aussie </item>
        <item> French </item>
        <item> American </item>
        <item> Spanish </item>
        <item> British </item>
        <item> Danish </item>
        <item> Canadian </item>
        <item> Finnish </item>
        <item> Norwegian </item>
        <item> Irish </item>
        <item> Iranian</item>
        <item> Dutch </item>
        <item> Turkish </item>
        <item> New Zealander</item>
        <item> Swiss </item>
    </string-array>

    <string-array name="acronyms">
        <item>    </item>
        <item> BR </item>
        <item> AU </item>
        <item> FR </item>
        <item> US </item>
        <item> ES </item>
        <item> GB </item>
        <item> DK</item>
        <item> CA </item>
        <item> FI </item>
        <item> NO </item>
        <item> IE</item>
        <item> IR</item>
        <item> NL </item>
        <item> TR</item>
        <item> NZ</item>
        <item> CH </item>
    </string-array>

    <string name="label_username"> Username </string>
    <string name="label_password">Password</string>

    <string name="sample_name"> Jeanette<br />Something </string>

    <string name="format_imageDescription"> Profile picture of %s</string>

    <string name="label_register"> Register </string>

    <string name="label_confirmPassword">Confirm Password</string>

    <string name="button_login">Log in</string>
    <string name="button_not_registered_yet"> Not registered yet </string>

    <string name="button_multiple_users"> Multiple users </string>
    <string name="error_missingUsername">The username is mandatory</string>

    <string name="error_empty"> A gender has to be filled </string>
    <string name="error_missingPassword">The password is mandatory</string>
    <string name="error_missingPasswordConfirmation">The password confirmation is mandatory</string>
    <string name="error_unmatchedPasswordConfirmation">The password confirmation does not match the password</string>
    <string name="error_takenUsername">That username is already taken</string>
    <string name="label_favorites">Favorites</string>

</resources>