<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.UserGen.AppWidgetContainer">

    <ImageView
        android:id="@+id/widgetImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/format_imageDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/widgetNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widgetImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sample_name" />

    <TextView
        android:id="@+id/widgetNationalityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widgetNameTextView"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/label_nationality" />

</RelativeLayout>